examples/test/testpolicy8268.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8268
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key28: value21
      key0: value47
      key49: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value32
      podSelector:
        matchLabels:
          key20: value7
          key42: value49
